# neutab

./: .gitignore  Cargo.toml  README.md
neutab/: Cargo.toml
neutab-cli/: Cargo.toml
neutab-cli/src/: args.rs  main.rs
neutab/res/: index.html  styles.scss
neutab/src/: builder.rs  config.rs  lib.rs  resources.rs  tera_filters.rs  tera_functions.rs  util.rs
neutab/src/builder/: site_icons.rs  svg_icons.rs
neutab/src/tera_filters/: favicon.rs  hash.rs  site_icon.rs
neutab/src/tera_functions/: count_links_in_page.rs  len.rs  svg_icon_href.rs
newtabgen/: Cargo.toml
newtabgen-cli/: Cargo.toml
newtabgen-cli/src/: args.rs  main.rs
newtabgen/example/: example.json
newtabgen/res/: index.html  styles.scss
newtabgen/src/: builder.rs  config.rs  lib.rs  resources.rs  tera_filters.rs  tera_functions.rs  util.rs
newtabgen/src/builder/: site_icons.rs  svg_icons.rs
newtabgen/src/tera_filters/: hash.rs  site_icon.rs
newtabgen/src/tera_functions/: count_links_in_page.rs  len.rs  svg_icon_href.rs
xtask/: Cargo.toml
xtask/src/: gen_config.rs  main.rs
