[package]
name = "neutab-cli"
version = "0.1.0"
edition = "2021"
authors = ["fr33zing"]
description = "CLI for neutab, create new tab pages from a config file"
license = "GPL-3.0-or-later"
repository = "https://github.com/fr33zing/neutab"

[dependencies]
neutab = { path = "../neutab" }
clap = { version = "4.0.22", features = ["derive"] }
webbrowser = "0.8.1"
tracing = "0.1.37"
tokio = "1.21.2"
tracing-subscriber = "0.3.16"
