[package]
name = "newtabgen"
version = "0.4.3"
edition = "2021"
authors = ["fr33zing"]
description = "Library for newtabgen-cli, create new tab pages from a config file"
license = "GPL-3.0-or-later"
repository = "https://github.com/fr33zing/newtabgen"

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
base32ct = { version = "0.1.0", features = ["alloc"] }
base64ct = { version = "1.5.3", features = ["alloc"] }
data-encoding = "2.3.2"
dirs = "4.0.0"
git2 = "0.15.0"
hex = "0.4.3"
image = "0.24.4"
itertools = "0.10.5"
minify-html = "0.10.3"
reqwest = "0.11.12"
resource = "0.5.0"
rsass = "0.26.0"
serde = "1.0.147"
serde_any = "0.5.0"
sha1 = "0.10.5"
site_icons = "0.3.8"
tera = "1.17.1"
thiserror = "1.0.37"
tokio = "1.21.2"
tracing = "0.1.37"
url = "2.3.1"
