[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["fr33zing"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neutab = { path = "../neutab" }
clap = { version = "4.0.22", features = ["derive"] }
lipsum = "0.8.2"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.87"
