[package]
name = "xtask"
version = "0.1.1"
edition = "2021"
authors = ["fr33zing"]
license = "GPL-3.0-or-later"
repository = "https://github.com/fr33zing/newtabgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newtabgen = { path = "../newtabgen" }
clap = { version = "4.0.22", features = ["derive"] }
lipsum = "0.8.2"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.87"
lazy_static = "1.4.0"
